resolving txt alignment bug

--- a/src/style/Resume.css
+++ b/src/style/Resume.css
@@ -7,7 +7,15 @@
     --primaryFont:'Rock Salt', cursive;
     --secondaryFont:'Josefin Sans', sans-serif;
 }
-  
+  .card {  
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  margin: 1rem;
+  padding: 1rem;
+  width: 33%;
+  align-self: first baseline;
+}
   
   .resume-button:hover{
     color: var(--highlight);
